[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Chat_&_Rolls_Results.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.266667, 0.262745, 0.262745, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.266667, 0.262745, 0.262745, 1 )

[node name="Table" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_base" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background_base"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base_UI" type="CanvasLayer" parent="."]
layer = 128

[node name="Chat_&_Rolls_Results" type="Control" parent="Base_UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Base_UI/Chat_&_Rolls_Results"]
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = 244.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="RichTextLabel" parent="Base_UI/Chat_&_Rolls_Results/VBoxContainer"]
margin_right = 224.0
margin_bottom = 463.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
scroll_following = true

[node name="Chat_Input" type="TextEdit" parent="Base_UI/Chat_&_Rolls_Results/VBoxContainer"]
margin_top = 467.0
margin_right = 224.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
custom_styles/normal = SubResource( 2 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
shortcut_keys_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
